// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components ImageButton OptionalLink renders Link component if \`href\` prop is set 1`] = `
<div>
  <a
    class="sc-bdVaJa kdqqWr"
    href="/some/path"
  />
</div>
`;

exports[`components ImageButton OptionalLink renders no Link component if \`href\` prop is not set 1`] = `
<div>
  <div
    class="sc-bwzfXH kZUMPF"
  />
</div>
`;
